
  - PickleType will compare using `==` when set up with mutable=False,
    and not the `is` operator.  To use `is` or any other comparator, send
    in a custom comparison function using PickleType(comparator=my_custom_comparator).
    
  - query doesn't throw an error if you use distinct() and an order_by()
    containing UnaryExpressions (or other) together [ticket:848]

  - fixed error where Query.add_column() would not accept a class-bound
    attribute as an argument; Query also raises an error if an invalid
    argument was sent to add_column() (at instances() time) [ticket:858]

  - added a little more checking for garbage-collection dereferences in
    InstanceState.__cleanup() to reduce "gc ignored" errors on app
    shutdown
    
  - The session API has been solidified:

    - It's an error to session.save() an object which is already
      persistent [ticket:840]

    - It's an error to session.delete() an object which is *not*
      persistent.

    - session.update() and session.delete() raise an error when updating
      or deleting an instance that is already in the session with a
      different identity.

    - The session checks more carefully when determining "object X already
      in another session"; e.g. if you pickle a series of objects and
      unpickle (i.e. as in a Pylons HTTP session or similar), they can go
      into a new session without any conflict

    - merge() includes a keyword argument "dont_load=True".  setting this
      flag will cause the merge operation to not load any data from the
      database in response to incoming detached objects, and will accept
      the incoming detached object as though it were already present in
      that session.  Use this to merge detached objects from external
      caching systems into the session.

  - Deferred column attributes no longer trigger a load operation when the
    attribute is assigned to.  In those cases, the newly assigned value