@@ -110,7 +110,10 @@ CHANGES
     
   - query doesn't throw an error if you use distinct() and an order_by()
     containing UnaryExpressions (or other) together [ticket:848]
-
+  
+  - order_by() expressions from joined tables are properly added to columns 
+    clause when using distinct() [ticket:786]
+    
   - fixed error where Query.add_column() would not accept a class-bound
     attribute as an argument; Query also raises an error if an invalid
     argument was sent to add_column() (at instances() time) [ticket:858]
